2011-1-17  Ryan S. Arnold  <rsa@us.ibm.com>

	* configure: Regenerated.
	* tests/test-strtod.c: Removed unnecessary test cases.
	* configure.ac: Incremented the version number to 1.0.5.
	* Versions.def: Incremented the version number to 1.0.5.

2011-01-17  Ryan S. Arnold  <rsa@us.ibm.com>

	* Makefile.in (libdfp_tests): Added test-log10d.
	* tests/test-decode.c: Added decode of log10d128(0.0000000011DL) to
	verify that it prints correctly in declets.
	* tests/test-logd.c (main): Added pbuf[CHAR_MAX] so that tests work
	properly.
	* tests/test-log10d.c: New test-case which verifies that printf now
	works properly for the result of log10d128(0.0000000011DL).
	* sysdeps/dpd/dpd-private.c: Fixed dpd_to_char[0x3f4] from "974" to
	"774" since the previous was a typo which was making values print
	incorrectly.

2011-01-17  Ryan S. Arnold  <rsa@us.ibm.com>

	* configure: Regenerated.
	* configure.ac: Removed addition of -fPIC to CFLAGS and instead export
	it to Makefile.in who is now responsible for adding it to CFLAGS.  Set
	(picflags): Default to -fpic since the GOT for libdfp should be small
	enough that -fPIC isn't needed.
	* Makefile.in: (BACKEND_CFLAGS): New variable which passes -mcpu=foo
	and -fpic to the backend sub make invocation in -DEFS to get around
	the fact that libdecnumber/Makefile.in won't allow overridden CFLAGS.
	* sysdeps/dpd/dpd-private.c: Fixed 'used when uninitialized' warning
	by switching "else if" case to "else" for Decimal128.

2010-12-10  Luis Machado  <luisgpm@br.ibm.com>

	* strtod32.c: Fix precedence of arithmetic operation.
	* tests/test-strtod.c: Add new testcase and fix wrong tests.

2010-12-03  Ryan S. Arnold  <rsa@us.ibm.com>

	* configure: Regenerated.
	* configure.ac: Incremented the version number to 1.0.4
	* README.user: Marked empty sections with (TODO).
	* Versions.def: Incremented the version number to 1.0.4

2010-11-29  Ryan S. Arnold  <rsa@us.ibm.com>

	* README.user: Added clarification of how to include dfp/stdlib.h,