@@ -63,10 +63,12 @@ d_type strtods[] =
   {__LINE__, "0.21", 0.21DF, 0.21DD, 0.21DL },
   {__LINE__, "0.999999",     0.999999DF,     0.999999DD,     0.999999DL },
   {__LINE__, "0.9999999",    0.9999999DF,    0.9999999DD,    0.9999999DL },
+  {__LINE__, "0.99999999",   1.000000DF,     0.99999999DD,   0.99999999DL },
+  {__LINE__, "0.999999999",  1.000000DF,     0.999999999DD,    0.999999999DL },
   {__LINE__, "19e9", 19000000000.0DF, 19000000000.0DD, 19000000000.0DL },
   {__LINE__, "3.14", 3.140000DF, 3.140000DD, 3.140000DL },
   {__LINE__, "3.14e-2", 0.031400DF, 0.031400DD, 0.031400DL },
-  {__LINE__, "1234.5678910111213e-5", 0.01234567DF ,0.01234567891011121DD ,0.012345678910111213DL },
+  {__LINE__, "1234.5678910111213e-5", 0.01234568DF ,0.01234567891011121DD ,0.012345678910111213DL },
   {0,0,0,0,0 }
 };
 
@@ -88,8 +90,8 @@ d_nan_type strtods_nan[] =
   /* Compare against the decoded declet for each representation of DEC_NAN since
    * since you can't compare DEC_NAN to DEC_NAN.  */
   {__LINE__, "NaN", DECLET32_NAN, DECLET64_NAN, DECLET128_NAN},
-  {__LINE__, "1.23456789E-7", "+1,234,567E-13", "+0,000,000,123,456,789E-15", "+0,000,000,000,000,000,000,000,000,123,456,789E-15" },
-  {__LINE__, "1234.5678910111213e-5", "+1,234,567E-8", "+1,234,567,891,011,121E-17", "+0,000,000,000,000,000,012,345,678,910,111,213E-18" },
+  {__LINE__, "1.23456789E-7", "+1,234,568E-13", "+0,000,000,123,456,789E-15", "+0,000,000,000,000,000,000,000,000,123,456,789E-15" },
+  {__LINE__, "1234.5678910111213e-5", "+1,234,568E-8", "+1,234,567,891,011,121E-17", "+0,000,000,000,000,000,012,345,678,910,111,213E-18" },
   {0,0,0,0,0 }
 };
 
